[gd_scene load_steps=2 format=2]

[ext_resource path="res://UpdateScreen.gd" type="Script" id=1]

[node name="VBC" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="VBC" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_right = -3.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VersionMessage" type="Label" parent="VBC"]
margin_right = 1360.0
margin_bottom = 14.0
align = 1

[node name="HSeparator" type="HSeparator" parent="VBC"]
margin_top = 18.0
margin_right = 1360.0
margin_bottom = 22.0

[node name="WebText" type="RichTextLabel" parent="VBC"]
margin_top = 26.0
margin_right = 1360.0
margin_bottom = 712.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
bbcode_enabled = true

[node name="DownloadButton" type="Button" parent="VBC"]
margin_top = 716.0
margin_right = 1360.0
margin_bottom = 736.0
text = "Open download page."

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="VBC/DownloadButton" to="." method="_on_DownloadButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
